# hookplayer

./: CUSTOMIZE.md  Cargo.toml  README.md  RELEASING.md  config.toml  eps.toml  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  player.rs  registry.rs  setup.rs  updater.rs
