[package]
name = "hookplayer"
version = "0.1.1"
edition = "2024"

[dependencies]
rodio      = { version = "0.20", features = ["symphonia-mp3", "symphonia-wav"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
rand       = "0.8"
reqwest    = { version = "0.12", features = ["blocking", "json"] }
